examples/test/testpolicy15234.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15234
  namespace: namespace121
spec:
  podSelector:
    matchLabels:
      key9: value18
      key27: value13
      key8: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value4
          key19: value43
          key13: value29
      podSelector:
        matchLabels:
          key13: value4
          key0: value30
          key26: value42
